# openbox-weather

./: AUTHORS  CMakeLists.txt  INSTALL  README.md  config.py.in  install.sh  openbox-weather.in
SlackBuild/: doinst.sh  openbox-weather.SlackBuild  slack-desc
icons/: README
